# MX

./: .gitignore  .gitmodules  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: switch_thumb_color.xml  switch_track_color.xml
app/src/main/res/drawable/: bg_button_filter.xml  bg_button_filter_outline.xml  bg_button_primary.xml  bg_button_secondary.xml  bg_divider.xml  bg_key_transparent.xml  bg_process_item.xml  bg_settings_card.xml  bg_settings_item_ripple.xml  bg_transparent_border.xml  calculate_24px.xml  compare_arrows_24px.xml  dialog_background.xml  icon_delete_24px.xml  icon_edit_24px.xml  icon_filter_list_24px.xml  icon_more_vert_24px.xml  icon_play_arrow_24px.xml  type_auto_24px.xml  type_code_24px.xml  type_float_24px.xml  type_hex_24px.xml  type_integer_24px.xml  type_mixed_24px.xml  type_text_24px.xml  type_xor_24px.xml
app/src/main/res/layout/: dialog_export_address.xml  dialog_filter.xml  dialog_import_address.xml  dialog_modify_value.xml  dialog_module_list.xml  dialog_module_list_popup.xml  dialog_multi_choice.xml  dialog_option_item.xml  dialog_process_selection.xml  dialog_remove_options.xml  (+24 more)
app/src/main/res/layout-land/: dialog_filter.xml  dialog_modify_value.xml  dialog_search_input.xml
app/src/main/res/layout-sw390dp/: item_saved_address.xml
app/src/main/rust/: .gitignore  .rustfmt.toml  Cargo.toml
app/src/main/rust/bplustree/: Cargo.toml
app/src/main/rust/bplustree/src/: lib.rs  map.rs  node.rs  set.rs
app/src/main/rust/jni-macro/: Cargo.toml  README.md
app/src/main/rust/jni-macro/jni-core/: Cargo.toml
app/src/main/rust/jni-macro/jni-core/src/: lib.rs
app/src/main/rust/jni-macro/jni-derive/: Cargo.toml
app/src/main/rust/jni-macro/jni-derive/src/: lib.rs
app/src/main/rust/jni-macro/jni-facade/: Cargo.toml
app/src/main/rust/jni-macro/jni-facade/src/: lib.rs
app/src/main/rust/src/: core.rs  driver.rs  lib.rs  wuwa.rs
app/src/main/rust/src/core/: freeze_manager.rs  globals.rs  mod.rs
app/src/main/rust/src/ext/: jni.rs  mod.rs
app/src/main/rust/src/jni_interface/: driver_installer.rs  freeze.rs  mod.rs  search.rs
app/src/main/rust/src/search/: jni.rs  lexer.rs  manager.rs  mock_memory.rs  mod.rs  parser.rs  result_manager.rs  types.rs
app/src/main/rust/src/search/engine/: group_search.rs  manager.rs  single_search.rs
app/src/main/rust/src/search/result_manager/: exact.rs  fuzzy.rs
app/src/main/rust/src/search/tests/: refine_search_tests.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+97 files in other folders)
